--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development",
+    "dev": "webpack-dev-server --mode=development --open --hot",
     "build": "rm -rf dist && webpack --mode=production --progress",
     "reg": "node reg-util.js"
   },
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
+    "cache-loader": "^2.0.1",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
