markup new work form

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "svg-transform-loader": "^2.0.7",
     "svgo-loader": "^2.2.0",
     "terser-webpack-plugin": "^1.2.3",
+    "thread-loader": "^2.1.2",
     "vue-loader": "^15.6.4",
     "vue-template-compiler": "^2.6.7",
     "webpack": "^4.29.6",
