--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
@@ -50,11 +51,13 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "normalize.css": "^8.0.1",
     "promptly": "^3.0.3",
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "signale": "^1.4.0",
+    "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.7",
     "vue-flickity": "^1.1.2",
     "vue-router": "^3.0.2"
