--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.18.1",
     "fs": "^0.0.1-security",
     "normalize.css": "^8.0.1",
@@ -63,8 +64,12 @@
     "signale": "^1.4.0",
     "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.7",
+    "vue-animate-scroll": "^0.1.5",
+    "vue-check-view": "^0.3.0",
     "vue-flickity": "^1.1.2",
+    "vue-observe-visibility": "^0.4.6",
     "vue-router": "^3.0.2",
+    "vue-scrollview": "^3.0.1",
     "vuex": "^3.1.0"
   }
 }
